--- a/src/SmartCafe.Menu.Infrastructure/SmartCafe.Menu.Infrastructure.csproj
+++ b/src/SmartCafe.Menu.Infrastructure/SmartCafe.Menu.Infrastructure.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0-rc.2" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.18.3" />
+    <PackageReference Include="Azure.Identity" Version="1.12.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
   </ItemGroup>
 
