fix: update Aspire configuration, stabilize app

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,21 +41,17 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
     - name: Restore dependencies
-      run: dotnet restore SmartCafe.Menu.sln
+      run: dotnet restore SmartCafe.Menu.slnx
 
     - name: Build solution
-      run: dotnet build SmartCafe.Menu.sln --configuration Release --no-restore
+      run: dotnet build SmartCafe.Menu.slnx --configuration Release --no-restore
 
     - name: Run unit tests
       run: dotnet test tests/SmartCafe.Menu.UnitTests/SmartCafe.Menu.UnitTests.csproj --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=unit-test-results.trx"
 
     - name: Run integration tests
       env:
-        Database__Host: localhost
-        Database__Port: 5432
-        Database__Name: smartcafe_menu_test
-        Database__Username: postgres
-        Database__Password: postgres
+        ConnectionStrings__Menus: "Host=localhost;Port=5432;Database=smartcafe_menu_test;Username=postgres;Password=postgres"
         AzureStorage__AccountName: devstoreaccount1
         AzureStorage__ContainerName: menu-images-test
         AzureServiceBus__Namespace: test-namespace
@@ -85,10 +81,10 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
     - name: Restore dependencies
-      run: dotnet restore SmartCafe.Menu.sln
+      run: dotnet restore SmartCafe.Menu.slnx
 
     - name: Check code formatting
-      run: dotnet format SmartCafe.Menu.sln --verify-no-changes --verbosity diagnostic
+      run: dotnet format SmartCafe.Menu.slnx --verify-no-changes --verbosity diagnostic
 
     - name: Run security scan
       uses: dotnet/nbgv@v0.4
