--- a/src/SmartCafe.Menu.API/appsettings.json
+++ b/src/SmartCafe.Menu.API/appsettings.json
@@ -1,9 +1,6 @@
 {
-  "Database": {
-    "Host": "localhost",
-    "Port": "5432",
-    "Name": "smartcafe_menu",
-    "Username": "postgres"
+  "ConnectionStrings": {
+    "Menus": "WILL BE PROVIDED IN RUNTIME"
   },
   "AzureStorage": {
     "AccountName": "smartcafestorage",
@@ -12,9 +9,6 @@
   "AzureServiceBus": {
     "Namespace": "smartcafe",
     "TopicName": "menu-events"
-  },
-  "KeyVault": {
-    "Uri": "https://smartcafe-keyvault.vault.azure.net/"
   },
   "ImageProcessing": {
     "MaxFileSizeBytes": 5242880,
