--- a/.editorconfig
+++ b/.editorconfig
@@ -59,6 +59,17 @@ csharp_space_between_method_declaration_empty_parameter_list_parentheses = false
 csharp_space_between_method_call_name_and_opening_parenthesis = false
 csharp_space_between_method_call_parameter_list_parentheses = false
 csharp_space_between_method_call_empty_parameter_list_parentheses = false
+csharp_space_around_declaration_statements = false
+csharp_space_before_open_square_brackets = false
+csharp_space_between_empty_square_brackets = false
+csharp_space_between_square_brackets = false
+
+# Wrapping preferences
+csharp_preserve_single_line_statements = false
+csharp_preserve_single_line_blocks = true
+
+# Using directive preferences
+csharp_using_directive_placement = outside_namespace:warning
 
 # Prefer "var" everywhere
 csharp_style_var_for_built_in_types = true:suggestion
@@ -133,6 +144,15 @@ dotnet_code_quality_unused_parameters = all:suggestion
 
 # CA1062: Validate arguments of public methods
 dotnet_diagnostic.CA1062.severity = none
+
+# IDE0055: Fix formatting (enforced by dotnet format)
+dotnet_diagnostic.IDE0055.severity = warning
+
+# IDE0005: Remove unnecessary usings
+dotnet_diagnostic.IDE0005.severity = error
+
+# IDE0001: Simplify name
+dotnet_diagnostic.IDE0001.severity = warning
 
 # IDE0290: Use primary constructor
 csharp_style_prefer_primary_constructors = true:suggestion
