--- a/src/SmartCafe.Menu.API/appsettings.json
+++ b/src/SmartCafe.Menu.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Menus": "WILL BE PROVIDED IN RUNTIME"
+    "MenuDb": "WILL BE PROVIDED IN RUNTIME"
   },
   "AzureStorage": {
     "AccountName": "smartcafestorage",
