--- a/.editorconfig
+++ b/.editorconfig
@@ -145,8 +145,8 @@ dotnet_code_quality_unused_parameters = all:suggestion
 # CA1062: Validate arguments of public methods
 dotnet_diagnostic.CA1062.severity = none
 
-# IDE0055: Fix formatting (enforced by dotnet format)
-dotnet_diagnostic.IDE0055.severity = warning
+# IDE0055: White-space formatting
+dotnet_diagnostic.IDE0055.severity = error
 
 # IDE0005: Remove unnecessary usings
 dotnet_diagnostic.IDE0005.severity = error
