--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -3,8 +3,7 @@ name: Code Coverage
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  # Removed pull_request trigger - coverage only runs on main branch
 
 env:
   DOTNET_VERSION: '10.0.x'
@@ -14,21 +13,6 @@ jobs:
     name: Test Coverage
     runs-on: ubuntu-latest
     
-    services:
-      postgres:
-        image: postgres:16
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: smartcafe_menu_test
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -45,8 +29,6 @@ jobs:
       run: dotnet build SmartCafe.Menu.slnx --configuration Release --no-restore
 
     - name: Run tests with coverage
-      env:
-        ConnectionStrings__Menus: "Host=localhost;Port=5432;Database=smartcafe_menu_test;Username=postgres;Password=postgres"
       run: |
         dotnet test SmartCafe.Menu.slnx \
           --configuration Release \
