build: Add NuGet package caching and code coverage publishing to CI workflow

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,7 +18,7 @@ updates:
       - "petro-konopelko"
     assignees:
       - "petro-konopelko"
-    versioning-strategy: increase
+    versioning-strategy: increase-if-necessary
     groups:
       # Group Microsoft packages together
       microsoft:
