--- a/.github/workflows/build-and-test-template.yaml
+++ b/.github/workflows/build-and-test-template.yaml
@@ -69,6 +69,15 @@ jobs:
           --logger "trx;LogFileName=integration-test-results.trx" \
           --collect:"XPlat Code Coverage" --results-directory ./TestResults/IntegrationTests
 
+    - name: Publish Test Report
+      uses: dorny/test-reporter@v2
+      if: always()
+      with:
+        name: "Test Results"
+        path: "TestResults/**/*.trx"
+        reporter: dotnet-trx
+        fail-on-error: false
+
     - name: Upload test results
       uses: actions/upload-artifact@v4
       if: always()
