--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -6,6 +6,7 @@ on:
 
 permissions:
   pull-requests: write  # For PR comments and labels
+  checks: write  # Required for dorny/test-reporter
 
 jobs:
   # Build and test the code
@@ -40,30 +41,6 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           path: coveragereport/SummaryGithub.md
-
-  publish-test-report:
-    name: Publish Test Results
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    if: always()
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-
-    - name: Download test results
-      uses: actions/download-artifact@v4
-      with:
-        name: test-results
-        path: TestResults
-
-    - name: Publish Test Report
-      uses: dorny/test-reporter@v2
-      with:
-        name: "Test Results"
-        path: "TestResults/**/*.trx"
-        reporter: dotnet-trx
-        fail-on-error: false
 
   # Validate PR metadata
   validate:
