feat: add database migrator project to aspire host

--- a/src/SmartCafe.Menu.AppHost/SmartCafe.Menu.AppHost.csproj
+++ b/src/SmartCafe.Menu.AppHost/SmartCafe.Menu.AppHost.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SmartCafe.Menu.API\SmartCafe.Menu.API.csproj" />
+    <ProjectReference Include="..\SmartCafe.Menu.Migrator\SmartCafe.Menu.Migrator.csproj" />
   </ItemGroup>
 
 </Project>
