--- a/src/SmartCafe.Menu.Application/SmartCafe.Menu.Application.csproj
+++ b/src/SmartCafe.Menu.Application/SmartCafe.Menu.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
     <PackageReference Include="Riok.Mapperly" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" />
   </ItemGroup>
