--- a/src/SmartCafe.Menu.Application/SmartCafe.Menu.Application.csproj
+++ b/src/SmartCafe.Menu.Application/SmartCafe.Menu.Application.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
     <PackageReference Include="Riok.Mapperly" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" />
+    <PackageReference Include="Scrutor" />
   </ItemGroup>
 
 </Project>
