--- a/.editorconfig
+++ b/.editorconfig
@@ -146,7 +146,10 @@ dotnet_style_prefer_conditional_expression_over_return = true:suggestion
 dotnet_code_quality_unused_parameters = all:suggestion
 
 # CA1062: Validate arguments of public methods
-dotnet_diagnostic.CA1062.severity = none
+dotnet_diagnostic.CA1062.severity = warning
+
+# CA1860: Prefer comparing 'Count' to 0 rather than calling 'Any()'
+dotnet_diagnostic.CA1860.severity = warning
 
 # IDE0055: White-space formatting
 dotnet_diagnostic.IDE0055.severity = error
