--- a/.editorconfig
+++ b/.editorconfig
@@ -158,7 +158,10 @@ dotnet_diagnostic.IDE0055.severity = error
 dotnet_diagnostic.IDE0005.severity = error
 
 # IDE0001: Simplify name
-dotnet_diagnostic.IDE0001.severity = warning
+dotnet_diagnostic.IDE0001.severity = error
+
+# IDE0046: 'if' statement can be simplified
+dotnet_diagnostic.IDE0046.severity = error
 
 # IDE0290: Use primary constructor
 csharp_style_prefer_primary_constructors = true:suggestion
