--- a/tests/SmartCafe.Menu.UnitTests/SmartCafe.Menu.UnitTests.csproj
+++ b/tests/SmartCafe.Menu.UnitTests/SmartCafe.Menu.UnitTests.csproj
@@ -1,8 +1,34 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <IsPackable>false</IsPackable>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="NSubstitute" />
+    <PackageReference Include="Bogus" />
+    <PackageReference Include="xunit.v3" />
+    <PackageReference Include="xunit.runner.visualstudio">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\SmartCafe.Menu.Domain\SmartCafe.Menu.Domain.csproj" />
-    <ProjectReference Include="..\..\src\SmartCafe.Menu.Application\SmartCafe.Menu.Application.csproj" />
+    <ProjectReference
+      Include="..\..\src\SmartCafe.Menu.Application\SmartCafe.Menu.Application.csproj" />
+    <ProjectReference Include="..\SmartCafe.Menu.Tests.Shared\SmartCafe.Menu.Tests.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="Xunit" />
   </ItemGroup>
 
 </Project>
