feat: add cafe seed

--- a/src/SmartCafe.Menu.API/appsettings.Production.json
+++ b/src/SmartCafe.Menu.API/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
     "KeyVault": {
-        "Uri": "https://smartcafe-keyvault.vault.azure.net/"
+        "Uri": "WILL BE REPLACED WITH ENV VARIABLE"
     }
 }
