--- a/src/SmartCafe.Menu.Infrastructure/SmartCafe.Menu.Infrastructure.csproj
+++ b/src/SmartCafe.Menu.Infrastructure/SmartCafe.Menu.Infrastructure.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" VersionOverride="12.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
     <PackageReference Include="Azure.Storage.Blobs" />
     <PackageReference Include="Azure.Messaging.ServiceBus" />
