--- a/src/SmartCafe.Menu.API/SmartCafe.Menu.API.csproj
+++ b/src/SmartCafe.Menu.API/SmartCafe.Menu.API.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+    <PackageReference Include="Serilog.Sinks.File" />
   </ItemGroup>
 
 </Project>
