build: add OpenTelemetry patterns to dependabot.yml
Add OpenTelemetry package patterns for Dependabot.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -56,6 +56,11 @@ updates:
         patterns:
         - "Serilog*"
 
+      # OpenTelemetry packages
+      openTelemetry:
+        patterns:
+        - "OpenTelemetry*"
+
   # Enable version updates for GitHub Actions
   - package-ecosystem: "github-actions"
     directory: "/"
