feat: add CORS support to Menu API from admin client app

--- a/src/SmartCafe.Menu.API/appsettings.Production.json
+++ b/src/SmartCafe.Menu.API/appsettings.Production.json
@@ -1,5 +1,10 @@
 {
-    "KeyVault": {
-        "Uri": "WILL BE REPLACED WITH ENV VARIABLE"
+  "KeyVault": {
+    "Uri": "WILL BE REPLACED WITH ENV VARIABLE"
+  },
+  "Cors": {
+    "AllowedOrigins": {
+      "AdminClient": "WILL BE PROVIDED WITH ENV VARIABLE"
     }
+  }
 }
