--- a/src/SmartCafe.Menu.API/appsettings.json
+++ b/src/SmartCafe.Menu.API/appsettings.json
@@ -16,6 +16,11 @@
     "ThumbnailWidth": 400,
     "ThumbnailHeight": 300
   },
+  "Cors": {
+    "AllowedOrigins": {
+      "AdminClient": "http://localhost:4200"
+    }
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
